# k4w2Grabber

./: .gitignore  CMakeLists.txt
3dplayer/: CMakeLists.txt
3dplayer/src/: 3dplayer.cpp
IMUReader/: CMakeLists.txt
IMUReader/include/: IMUReader.h  MadgwickAHRS.h
IMUReader/src/: IMUReader.cpp  MadgwickAHRS.cpp  main.cpp
kinect2grabber/: CMakeLists.txt
kinect2grabber/include/: Kinect2Grabber.h
kinect2grabber/src/: Kinect2Grabber.cpp
kinect2recorder/: CMakeLists.txt
kinect2recorder/src/: main.cpp
